tests/errors/runtime.FileNotFound.1.res
>> Runtime | File: runtime.FileNotFound.1.art
     error | Line: 1
           | 
           | file not found: *.art

